# zooplankton

./: .Rbuildignore  .gitignore  .pre-commit-config.yaml  DESCRIPTION  LICENSE  LICENSE.md  README.Rmd  README.md
python/: config.toml  emnist_flat.py  hello.py  pyproject.toml
python/cnn/: pyproject.toml
python/emnist/: flat.py
python/emnist/00_configs/: demo_flat.toml  demo_lcpn.toml  demo_lcpn_flat_backbone.toml  flat.toml  lcpn.toml
python/emnist/00_hierarchies/: morphological.json
python/emnist/01_results/: flat_2026_03_02_14_13_30.toml
python/emnist/02_demos/: 01_hierarchy_definition.py  04_lcpn_train.py  loading_lpcn_dataset.py
python/emnist/99_demos/: 01_flat_model.py  01_lcpn_model.py  02_lcpn_flat_backbone_model.py  03_flat_lcpn_comparison.py  03_lcpn_model.py  04_flat_train.py  04_lcpn_train.py  05_lcpn_flat_backbone_train.py  06_flat_lcpn_compare.py
python/zooplankton/00_configs/: demo_early_stopping.toml  demo_flat.toml  demo_lcpn.toml  flat_2026_03_23.toml  flat_2026_04_07.toml  lcpn_2026_03_23.toml  lcpn_2026_04_07.toml  lcpn_flat_backbone_frozen_2026_03_23.toml  lcpn_flat_backbone_unfrozen_2026_03_23.toml
python/zooplankton/00_hierarchies/: demo_morphological.json  morphological.json  morphological_2026_01_26.json  morphological_extended_2026_01_26.json
python/zooplankton/00_label_maps/: demo_early_stopping.json  demo_flat.json  nodes_2026_01_26.json
python/zooplankton/97_experiments/: flat.py  lcpn.py  lcpn_flat_backbone.py
python/zooplankton/98_eda/: lcpn_flat_backbone_exploration.py  plot_confusion.py  plot_f1_score.py  (+8 more)
(+32 files in other folders)
