[project]
name = "zooplankton"
version = "0.1.0"
description = "Provide hierarchical models for classifying images of Zooplankton."
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=7.2.0",
]

[tool.uv.workspace]
members = [
    "cnn",
]
