[project]
name = "cnn"
version = "0.1.0"
description = "Helpers for training and tests CNN models."
readme = "README.md"
authors = [
    { name = "Ethan Sansom", email = "ethan.sansom29@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "timm>=1.0.25",
    "tomli-w>=1.2.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
